2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	PR rtl-optimization/39453
	PR rtl-optimization/42246
	* sel-sched-ir.c (considered_for_pipelining_p): Do not test
	for pipelining_p.
	(sel_add_loop_preheaders): Add preheader to last_added_blocks.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Andrey Belevantsev  <abel@ispras.ru>
	    Alexander Monakov  <amonakov@ispras.ru>

	PR middle-end/42245
	* sel-sched-ir.c (sel_recompute_toporder): New.  Use it...
	(maybe_tidy_empty_bb): ... here.  Make static.  Add new
	argument.  Update all callers.
	(tidy_control_flow): ... and here.  Recompute topological order
	of basic blocks in region if necessary.
	(sel_redirect_edge_and_branch): Change return type.  Return true
	if topological order might have been invalidated.
	(purge_empty_blocks): Export and move from...
	* sel-sched.c (purge_empty_blocks): ... here.
	* sel-sched-ir.h (sel_redirect_edge_and_branch): Update prototype.
	(maybe_tidy_empty_bb): Delete prototype.
	(purge_empty_blocks): Declare.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Andrey Belevantsev <abel@ispras.ru>

	PR rtl-optimization/42249
	* sel-sched.c (try_replace_dest_reg): When chosen register
	and original register is the same, do not bail out early, but
	still check all original insns for validity of replacing destination
	register.  Set EXPR_TARGET_AVAILABLE to 1 before leaving function
	in this case.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2009-11-13  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/41697
	* sel-sched-ir.c (fallthru_bb_of_jump): Bail out when a block with
	a conditional jump has a single successor.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2009-11-13  Andrey Belevantsev  <abel@ispras.ru>
