@@ -3,6 +3,14 @@
 	Backport from mainline:
 	2010-01-14  Alexander Monakov <amonakov@ispras.ru>
 
+	PR rtl-optimization/42294
+	* gfortran.dg/pr42294.f: New.
+
+2010-08-24  Andrey Belevantsev <abel@ispras.ru>
+
+	Backport from mainline:
+	2010-01-14  Alexander Monakov <amonakov@ispras.ru>
+
 	PR rtl-optimization/39453
 	PR rtl-optimization/42246
 	* gcc.dg/pr39453.c: New.
